# choremarket

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: db.py  main.py  mechanism.py  mock_data.py  repository.py  weeks.py
backend/app/static/: styles.css
backend/app/templates/: admin.html  balances.html  base.html  chores.html  ledger.html  preferences.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  App.tsx  main.jsx  main.tsx  styles.css
frontend/src/lib/: api.ts  mechanism.test.ts  mechanism.ts
frontend/src/pages/: AdminPage.tsx  BalancesPage.tsx  LedgerPage.tsx  PreferencesPage.tsx  RecurringChoresPage.tsx
laboratory/: README.md  __init__.py  posted_price_lp.py  run_posted_price_lp.py
tests/: test_app_flow.py  test_laboratory_posted_price_lp.py
